syntax_err.txt
п»ҝnode : C:\Users\ba\OneDrive\зҚўп—ҫоІ„\exam
\temp_check.js:1489
дҪҚж–ј з·ҡи·Ҝ:1 еӯ—е…ғ:1
+ node -c temp_check.js 2>&1 | Out-F
ile -Encoding utf8 syntax_err.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSp 
   ecified: (C:\Users\ba\One...p_c  
  heck.js:1489:String) [], Remote   
 Exception
    + FullyQualifiedErrorId : Nativ 
   eCommandError
 
                                show
Toast(\`?оҪ…? ж’Ңи„°иә«ж‘°о«®ВҖп–“${folderName || '
?еҜ§оӯ–??}?пҡҷоҫӯ?иҠё??иҮ¬п…ҜйқҳпүҚ?йһҲпӢӘ?жҶӯй–ұ`, 'success')
;
                                    
      ^

SyntaxError: Invalid or unexpected t
oken
    at wrapSafe (node:internal/modul
es/cjs/loader:1692:18)
    at checkSyntax (node:internal/ma
in/check_syntax:76:3)

Node.js v24.12.0
